# multi_agentic_rag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.yaml  env.tf  main.tf  pyproject.toml  requirements.txt  variables.tf
app/: main.py
app/main_graph/: graph_builder.py  graph_states.py
app/researcher_graph/: graph_builder.py  graph_states.py  researcher.py
app/utils/: prompt.py  utils.py
main_graph/: graph_builder.py  graph_states.py
researcher_graph/: graph_builder.py  graph_states.py  researcher.py
retrievers/tavily/: tavily_search.py
utils/: prompt.py
