[tool.poetry]
name = "multi-agentic-rag"
version = "0.0.1"
description = ""
authors = ["Mai Tram <maihoangbichtram@gmail.com>"]
license = "MIT"
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.10,<=3.14"
langchain = "^0.3.21"
langchain-core = "^0.3.46"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.9"
langchain-google-genai = "^2.1.0"
langgraph = "^0.3.18"
rank-bm25 = "^0.2.2"
langchain-cohere = "^0.4.3"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
